<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Portal Coordinator</string>
    <string name="action_settings">Settings</string>
    <string name="fetch_data_description">Fetch and Notify</string>
    <string name="default_reference_file_value">http://example.com/portals.json</string>
    <string name="reference_file_description_value">Reference File</string>
    <string name="default_username_value">username</string>
    <string name="username_description_value">Username</string>

</resources>