<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/username_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/username_description_value"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
        android:id="@+id/username_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_description"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/default_username_value" />

    <TextView
        android:id="@+id/reference_file_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/reference_file_description_value"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
        android:id="@+id/reference_file_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reference_file_description"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/default_reference_file_value"
        android:inputType="textUri" />
    
    <Button
        android:id="@+id/fetch_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="fetchButtonClick"
        android:text="@string/fetch_data_description" />

</RelativeLayout>